Fixed text overflow

--- a/post/main.css
+++ b/post/main.css
@@ -45,6 +45,7 @@ body {
 .post {
   flex-grow: 1;
   margin-left: 20px;
+  overflow-x: hidden;
 }
 
 .post-field {
@@ -55,6 +56,7 @@ body {
   color: #abb8d4;
   height: 100px;
   font-size: 1.1rem;
+  overflow: hidden;
 }
 
 .post-field:empty::before {
